fix type on sass/css for visible menu bar

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -570,7 +570,7 @@ footer
 #slide-menu-button
   visibility: hidden
   @include respond-to(phone)
-    visibility: visble
+    visibility: visible
 
 a#slide-menu-button:hover
   text-decoration: none
